--- a/package.json
+++ b/package.json
@@ -16,19 +16,19 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.7",
+    "css-loader": "^3.4.2",
     "file-loader": "^1.1.5",
+    "nodemon": "^1.17.5",
     "style-loader": "^0.19.0",
-    "webpack": "^3.10.0",
-    "nodemon": "^1.17.5"
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
   },
   "dependencies": {
     "body-parser": "latest",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "lodash": "latest",
-    "prettier": "^1.13.7",
     "react": "^16.2.0",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.12.0"
   }
 }
